fix: mbticode for dark mode

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -12,6 +12,11 @@
     font-family: monospace;
 }
 
+.dark .mbticode {
+    background: white;
+    color: black;
+}
+
 .cols {
     display: grid;
 }
